<resources>
    <string name="app_name">Codementor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Atividades</string>
    <string name="sobre1">O Codementor foi criado para facilitar o aprendizado, incentivar e guiar você no universo do Kotlin, a linguagem de programação amplamente utilizada no desenvolvimento mobile.</string>
    <string name="sobre2">Aqui, você encontrará diversos módulos interativos com temas variados, projetados para aprimorar suas habilidades de programação. Além disso, o aplicativo conta com uma Inteligência Artificial integrada, pronta para esclarecer dúvidas e oferecer suporte personalizado ao seu aprendizado.</string>
    <string name="sobre3">Este projeto foi desenvolvido por João, Carlos e Alan como parte de um trabalho acadêmico, com o objetivo de unir tecnologia e educação de forma prática e acessível.</string>
    <string name="sobre4">Explore, aprenda e programe com o Codementor!</string>
    <string name="back_button">Voltar</string>
    <string name="logo_description">Logo do Aplicativo</string>
    <string name="chat_button">Botão para abrir o chat de IA</string>
</resources>

